<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fragment_floating" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>
        <TextView android:id="@+id/floating_header" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="16dp" android:layout_marginRight="16dp" android:text="@string/help_floating_header" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/title"/>
        <TextView android:textSize="17sp" android:textStyle="bold" android:id="@+id/ieee754_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/single_ieee754" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/floating_header" style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>
        <TextView android:gravity="center" android:id="@+id/ieee754_content" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="8dp" android:layout_marginRight="16dp" android:text="@string/help_ieee754_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/ieee754_title"/>
        <TextView android:textStyle="bold" android:gravity="center" android:id="@+id/ieee754_example" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help_ieee754_example" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/ieee754_content"/>
        <TextView android:textSize="13sp" android:textStyle="bold" android:gravity="center" android:id="@+id/ieee754_example2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/help_ieee754_example2" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/ieee754_example"/>
        <TextView android:textSize="17sp" android:textStyle="bold" android:id="@+id/double_ieee754_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/double_ieee754" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/ieee754_example2" style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>
        <TextView android:id="@+id/double_ieee754_content" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="8dp" android:layout_marginRight="16dp" android:text="@string/help_double_ieee754_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/double_ieee754_title"/>
        <TextView android:textStyle="bold" android:gravity="center" android:id="@+id/complement1_example" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help_double_ieee754_example" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/double_ieee754_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
