<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bases"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>
        <TextView
            android:gravity="center"
            android:id="@+id/bases_content"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:text="@string/help_bases"/>
        <TextView
            android:textSize="17sp"
            android:textStyle="bold"
            android:id="@+id/binary_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/binary"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>
        <TextView
            android:textStyle="bold"
            android:id="@+id/binary_example"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/help_binary_example" />
        <TextView
            android:textSize="17sp"
            android:textStyle="bold"
            android:id="@+id/octal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/octal"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>
        <TextView
            android:textStyle="bold"
            android:id="@+id/octal_example"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/help_octal" />
        <TextView
            android:textSize="17sp"
            android:textStyle="bold"
            android:id="@+id/hex_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="hex"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>
        <TextView
            android:gravity="center"
            android:id="@+id/hex_help"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/help_hex_content" />
        <TextView
            android:textStyle="bold"
            android:id="@+id/hex_example"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/help_hex_example" />
    </LinearLayout>
</ScrollView>
