<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_signed_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>
        <TextView android:id="@+id/signed_header" android:padding="8dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="16dp" android:layout_marginRight="16dp" android:text="@string/help_signed_header" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/title"/>
        <TextView
            android:textSize="17sp" android:textStyle="bold"
            android:id="@+id/magnitude_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" android:text="magnitude" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/signed_header" style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>
        <TextView android:gravity="center" android:id="@+id/magnitude_content" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="8dp" android:layout_marginRight="16dp" android:text="@string/help_magnitude" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/magnitude_title"/>
        <TextView android:textStyle="bold" android:gravity="center" android:id="@+id/magnitude_example" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help_example_magnitude" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/magnitude_content"/>
        <TextView android:textSize="17sp" android:textStyle="bold" android:id="@+id/complement1_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/complement1" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/magnitude_example" style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>
        <TextView android:id="@+id/complement1_content" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="8dp" android:layout_marginRight="16dp" android:text="@string/help_complement1" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/complement1_title"/>
        <TextView android:textStyle="bold" android:gravity="center" android:id="@+id/complement1_example" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help_example_complement1" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/complement1_content"/>
        <TextView android:textSize="17sp" android:textStyle="bold" android:id="@+id/complement2_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/complement2" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/complement1_example" style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>
        <TextView android:id="@+id/complement2_content" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="8dp" android:layout_marginRight="16dp" android:text="@string/help_complement2" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/complement2_title"/>
        <TextView android:textStyle="bold" android:gravity="center" android:id="@+id/complement2_example" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/help_example_complement2" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/complement2_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
