<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:lines="1"
        android:textSize="22sp"
        android:layout_marginStart="54dp"
        android:text="@string/excess_notation_bold"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:fontFamily="@font/normal"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/colorBlue">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/decimal_signed_input"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/decimal_signed_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/jura_bold"
                            android:hint="@string/signed_decimal"
                            android:digits="0123456789-"
                            android:inputType="numberSigned"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/excess_identifier_input"
                        android:layout_width="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/decimal_signed_input">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/excess_identifier_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/jura_bold"
                            android:hint="@string/excess_identifier"
                            android:text="@string/_128"
                            android:digits="0123456789"
                            android:maxLength="19"
                            android:inputType="numberDecimal"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/excess_bits_input"
                        android:layout_width="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/excess_identifier_input">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/excess_bits_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/jura_bold"
                            android:hint="@string/number_of_bits"
                            android:text="@string/_8"
                            android:digits="0123456789"
                            android:maxLength="2"
                            android:inputType="numberDecimal"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/excess_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/excess_bits_input">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/excess_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/jura_bold"
                            android:hint="@string/excess_notation"
                            android:digits="01"
                            android:maxLength="64"
                            android:inputType="numberDecimal"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>
